コントローラーとシリアライザー調整
